<resources>
    <string name="app_name">Hand Cricket</string>
    <string name="action_settings">Settings</string>
    <string name="edit_message">Enter a Message</string>
    <string name="button_send">Sign Up!</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_display_message">DisplayMessageActivity</string>

    <string name="cpuscore">0</string>

    <string name="start">Start!</string>
    <string name="select_heads_tails">Select heads or tails</string>
    <string name="heads">Heads</string>
    <string name="tails">Tails</string>
    <string name="Batting">Batting</string>
    <string name="Bowling">Bowling</string>
    <string name="start_match">Start Match</string>
    <string name="rules">Rules</string>
    <string name="invite">Invite Friends</string>
    <string name="stats">Stats</string>
    <string name="leaderboard">Leaderboard</string>
    <string name="app_id">1442763366033477</string>

</resources>
