<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:background="@android:color/background_light">
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="1dp"
        android:background="@android:color/darker_gray">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="20dp">

            <ImageView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/coin" />
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
            <Button
                android:id="@+id/heads"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="5"
                android:text="@string/heads" />
            <Button
                android:id="@+id/tails"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="5"
                android:text="@string/tails" />

                <Button
                    android:id="@+id/batting"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="5"
                    android:text="@string/Batting"
                    android:visibility="gone"/>
                <Button
                    android:id="@+id/bowling"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="5"
                    android:text="@string/Bowling"
                    android:visibility="gone"/>
                <Button
                    android:id="@+id/start_match"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/start_match"
                    android:visibility="gone"/>
                </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>